#207 Fix findings from review